--- a/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
@@ -1,12 +1,13 @@
-
 .root-card-class-desktop {
     height: 550px;
     display: flex;
     width: 100%;
-
+    text-align: center;
 }
 
 .pets-about-us-wraper {
+
+
     margin: 55px;
     max-height: fit-content;
     border: solid 2px #C6E5F1;
@@ -29,6 +30,7 @@
 }
 
 .our-story-heading-desktop {
+  
     margin-top: 20px;
     font-size: xx-large;
     font-family: math;
@@ -36,6 +38,7 @@
 }
 
 .our-story-text-desktop {
+    /* box-shadow: 11px -9px 7px -3px rgba(0, 0, 0, 0.59); */
     text-align: center;
     margin-left: 50px;
     margin-right: 50px;
@@ -50,14 +53,11 @@
 
     .root-card-class-desktop {
         display: block;
-        
-        
-    }
-    p
 
-    .pets-about-us-wraper {
-        
+
     }
+
+    p .pets-about-us-wraper {}
 
     .our-story-text-desktop {
         max-width: fit-content;
@@ -74,4 +74,3 @@
 
 
 }
-
