--- a/client/src/Components/auth/SignUpPage/signUpPage.css
+++ b/client/src/Components/auth/SignUpPage/signUpPage.css
@@ -1,59 +1,66 @@
-.inside-sign-up-card {
-    margin-top: 7em;
-    margin-bottom: 4em;
-    background: #ececec;
+.register-wrapper-class {
+    display: flex;
+    justify-content: center;
+    margin-left: 350px;
+    width: 50%;
+    padding: 10px;
+    min-height: fit-content;
+    margin-bottom: 20px;
 }
 
+
 .register-heading-class {
-    padding-top: 40px;
-}
-.register-wrapper-class{
-    min-height: 570px;
-    text-align: -webkit-center;
-}
-.input-register-class{
     text-align: center;
-    border-radius: 20px;
+}
+
+.input-register-class {
+    text-align: center;
+    margin-top: 15px;
+    border-radius: 5px;
+}
+
+.input-register-class:hover {
+    color: black
 }
 
 .register-button {
-
-    width: 150px;
-    border-radius: 20px;
-    border: 2px solid black;
-    color: white;
-    background: #F0F8FF;
-    padding: 0px;
-    text-align: center;
     margin-top: 20px;
-    color: #171425;
-   
-    box-shadow: 2px 1px 10px #54B3D6;
-    margin-bottom: 20px;
+    border-radius: 5px;
+    background-color: rgb(33, 21, 21);
+    color: white;
+    width: 30%;
+    margin-bottom: 10px;
 }
+
+.register-button:hover {
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    background-color: grey;
+}
+
 .register-button:active {
-    box-shadow: 2px 3px 5px black;
+    -webkit-box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 
-.form-register-class {
-    width: 250px;
-    border-radius: 20px;
-    border: 2px solid black;
-    color: white;
-    background: #F0F8FF;
-    padding: 0px;
-    text-align: center;
-    margin-top: 20px;
-    color: #171425;
-    /* text-shadow: 2px 3px 5px black; */
-    box-shadow: 2px 1px 10px #54B3D6;
-
+.form-register-class   {
+    border: 1px solid black;
+    margin-top: 7em;
+    -webkit-box-shadow: 6px -4px 8px -2px #000000;
+    box-shadow: 6px -4px 8px -2px #000000;
+    width: 70%;
+    padding: 10px;
+    height: fit-content;
+    text-align: -webkit-center;
+    background-color: whitesmoke;
+    opacity: 0.9;
 }
 
-.sign-up-card {
-    max-width: auto;
-    text-align-last: center;
-    background: #ececec;
 
+@media screen and (max-width: 768px) {
+
+    .register-wrapper-class {
+        margin-left: 140px;
+    }
 
 }
