--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,6 @@
 
 .footer-content {
   background: #ececec;
-
   margin-top: auto;
 }
 
@@ -18,7 +17,9 @@
   background-repeat: repeat;
   background-size: 760px;
   width: auto;
+  height: 100%;
 }
+
 
 
 @media screen and (max-width: 768px) {}
