--- a/client/src/Components/ProfileComponents/DetailsPetPage/pet-detail-card.css
+++ b/client/src/Components/ProfileComponents/DetailsPetPage/pet-detail-card.css
@@ -4,8 +4,11 @@
     height: 570px
 }
 
+.heading-class{
+    margin-top: 40px;
+}
 .pet-card-wrapper{
-    margin-top: 4em;
+    margin-top: 5em;
 }
 
 .details-pet-card {
@@ -52,8 +55,10 @@
     cursor: pointer;
     margin-left: 20px;
     font-size: 30px;
+    margin-top: 20px;
 }
 
 .button-bar {
     margin-bottom: 20px;
+    margin-top: 10px;
 }
