details page update css

--- a/client/src/Components/OurCatalog/PetCardU.js/pet-card-our-catalog.css
+++ b/client/src/Components/OurCatalog/PetCardU.js/pet-card-our-catalog.css
@@ -1,18 +1,13 @@
-.pet-card-wrapper {
-    width: 300px;
-    height: 325px;
+.details-pet-card-our-catalog {
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    border: 1px solid red;
+    height: 330px;
+    margin: 15px;
+
     border: 1px solid black;
     -webkit-box-shadow: 6px -4px 8px -2px #000000;
     box-shadow: 6px -4px 8px -2px #000000;
-    margin: 15px;
-
-}
-
-.details-pet-card {
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-    height: 325px;
-    
 }
 
 .imgs {
@@ -21,22 +16,33 @@
     width: 100%;
 }
 
-.card-button {
+.card-button-our-catalog {
     padding: 10px;
     border-radius: 5px;
     background-color: rgb(33, 21, 21);
     color: white;
     width: 30%;
-    margin-bottom: 10px;
+    text-decoration: none;
+    margin: 20px;
 }
 
-.card-button:hover {
+.card-button-our-catalog:hover {
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
     background-color: grey;
+    color: white;
 }
 
-.card-button:active {
+.link-a {
+    text-decorlink-ation: none;
+    color: white;
+}
+
+.link-a:hover {
+    color: white;
+}
+
+.card-button-our-catalog:active {
     -webkit-box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
     box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
