--- a/client/src/Components/ProfileComponents/PetsCatalog/PetCardCatalog/pet-card.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/PetCardCatalog/pet-card.css
@@ -1,18 +1,17 @@
-.pet-card-wrapper {
+.pet-card-wrapper-pets-catalog {
     width: 300px;
-    height: 325px;
     border: 1px solid black;
     -webkit-box-shadow: 6px -4px 8px -2px #000000;
     box-shadow: 6px -4px 8px -2px #000000;
     margin: 15px;
-
+    height: 350px;
 }
 
-.details-pet-card {
+.details-pet-card-pets-catalog {
     background-color: rgb(255, 255, 255);
     text-align: center;
-    height: 325px;
-    
+    height: 350px;
+
 }
 
 .imgs {
