--- a/client/src/Components/ProfileComponents/DetailsPetPage/pet-detail-card.css
+++ b/client/src/Components/ProfileComponents/DetailsPetPage/pet-detail-card.css
@@ -22,6 +22,13 @@
     height: fit-content;
 
 }
+.button-bar button {
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(33, 21, 21);
+    color: white;
+    margin-bottom: 10px;
+}
 
 .imgs-details-page {
     width: 100px;
