update css details page

--- a/client/src/Components/OurCatalog/PetCardU.js/pet-card-our-catalog.css
+++ b/client/src/Components/OurCatalog/PetCardU.js/pet-card-our-catalog.css
@@ -4,7 +4,7 @@
     border: 1px solid red;
     height: 330px;
     margin: 15px;
-
+    width: 230px;
     border: 1px solid black;
     -webkit-box-shadow: 6px -4px 8px -2px #000000;
     box-shadow: 6px -4px 8px -2px #000000;
