--- a/client/src/Components/ProfileComponents/DetailsPetPage/pet-detail-card.css
+++ b/client/src/Components/ProfileComponents/DetailsPetPage/pet-detail-card.css
@@ -1,7 +1,8 @@
 .root-element {
     display: flex;
     justify-content: center;
-    height: 690px
+    height: fit-content;
+    margin-bottom: 40px;
 }
 
 .heading-class {
@@ -24,12 +25,16 @@
 
 }
 
+
+
 .button-bar button {
+    margin-left: 10px;
     padding: 5px;
     border-radius: 5px;
     background-color: rgb(33, 21, 21);
     color: white;
-    width: 20%;
+    width: 50px;
+    height: 50px;
     margin-bottom: 10px;
 }
 
@@ -49,25 +54,9 @@
     height: 90px;
 }
 
-.card-button {
-    padding: 10px;
-    border-radius: 5px;
-    background-color: rgb(33, 21, 21);
-    color: white;
-    width: 20%;
-    margin-bottom: 10px;
-}
 
-.card-button:hover {
-    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
-    background-color: grey;
-}
 
-.card-button:active {
-    -webkit-box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
-    box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
-}
+
 
 
 
@@ -80,10 +69,7 @@
     margin-bottom: 30px;
 }
 
-.button-bar {
-    margin-bottom: 20px;
-    margin-top: 20px;
-}
+
 
 .pet-info div {
     margin-bottom: 6px;
