--- a/client/src/Components/ProfileComponents/EditPetPage/edit-page.css
+++ b/client/src/Components/ProfileComponents/EditPetPage/edit-page.css
@@ -4,18 +4,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: fit-content;
+    margin-bottom:40px;
 
 }
 
 .add-new-pet-heading {
     text-align: center;
-    padding-top: 40px;
 }
 
 .input-edit-pet-class {
     text-align: center;
-    border-radius: 20px;
+    border-radius: 5px;
     resize: none;
+    margin: 10px;
 }
 
 .input-edit-pet-class:active {
@@ -23,36 +25,47 @@
 }
 
 .edit-pet-button {
-    width: 150px;
-    border-radius: 20px;
-    border: 2px solid black;
+    height: 75px;
+    border-radius: 5px;
+    background-color: rgb(33, 21, 21);
     color: white;
-    background: rgba(150, 197, 217, 0.36);
-    padding: 0px;
-    text-align: center;
-    margin-top: 10px;
-    color: #171425;
-    /* text-shadow: 2px 3px 5px black; */
-    box-shadow: 2px 1px 10px #54B3D6;
+    width: 40%;
+}
+
+.edit-pet-button:hover {
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    background-color: grey;
 }
 
 .edit-pet-button:active {
-    box-shadow: 2px 3px 5px black;
+    -webkit-box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 
 .edit-new-pet-form {
-    margin: 10px;
-    padding: 20px;
-
-    background-color: #C6E5F1;
-    border-radius: 32px;
-    width: 250px;
-    height: auto;
+    width: 350px;
+    border: 1px solid black;
+    margin-top: 4em;
+    -webkit-box-shadow: 6px -4px 8px -2px #000000;
+    box-shadow: 6px -4px 8px -2px #000000;
+    padding: 10px;
     text-align: center;
+    background-color: whitesmoke;
+    opacity: 0.9;
+    margin-bottom: 49px;
 
-    border: solid 2px #C6E5F1;
-    background-color: aliceblue;
-    margin-left: 25px;
-    box-shadow: 1px 1px 2px black, 0 0 25px #171425, 0 0 5px #686d67;
+}
+.pet-info-textarea{
+    width: 300px;
+    height: 70px;
+    margin-right: 50px;
+}
 
+.pet-info-label{
+    margin-right: 120px;
+}
+
+.button-div{
+    text-align: center;
 }
