--- a/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
+++ b/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
@@ -32,6 +32,8 @@
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
     background-color: grey;
+    color: salmon;
+
 }
 
 .create-pet-button:active {
