--- a/client/src/Components/ProfileComponents/EditPetPage/edit-page.css
+++ b/client/src/Components/ProfileComponents/EditPetPage/edit-page.css
@@ -1,11 +1,15 @@
 /* .edit-new-pet-root {} */
 
+.left-arrow {
+    border: 0px;
+}
+
 .edit-new-pet-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     height: fit-content;
-    margin-bottom:40px;
+    margin-bottom: 40px;
 
 }
 
@@ -46,7 +50,7 @@
 }
 
 .edit-new-pet-form {
-    
+
     width: 350px;
     border: 1px solid black;
     margin-top: 4em;
@@ -59,16 +63,17 @@
     margin-bottom: 49px;
 
 }
-.pet-info-textarea{
+
+.pet-info-textarea {
     width: 300px;
     height: 70px;
     margin-right: 50px;
 }
 
-.pet-info-label{
+.pet-info-label {
     margin-right: 120px;
 }
 
-.button-div{
+.button-div {
     text-align: center;
 }
