--- a/client/src/Components/ProfileComponents/EditPetPage/edit-page.css
+++ b/client/src/Components/ProfileComponents/EditPetPage/edit-page.css
@@ -29,6 +29,7 @@
 }
 
 .edit-pet-button {
+    margin: 7px;
     height: 75px;
     border-radius: 5px;
     background-color: rgb(33, 21, 21);
@@ -75,5 +76,7 @@
 }
 
 .button-div {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
