--- a/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
+++ b/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
@@ -1,5 +1,8 @@
 /* .create-new-pet-root {} */
-
+.textarea-class{
+    width: 300px;
+    height: 70px;
+}
 .create-new-pet-wrapper {
     display: flex;
     justify-content: center;
