--- a/client/src/Components/ProfileComponents/PetsCatalog/PetCardCatalog/pet-card.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/PetCardCatalog/pet-card.css
@@ -3,7 +3,8 @@
     border: 1px solid black;
     -webkit-box-shadow: 6px -4px 8px -2px #000000;
     box-shadow: 6px -4px 8px -2px #000000;
-    margin: 15px;
+    margin: 20px;
+    width: fit-content;
 }
 
 .details-pet-card-pets-catalog {
