--- a/client/src/Components/core/NavigationBar/NavigationBar.css
+++ b/client/src/Components/core/NavigationBar/NavigationBar.css
@@ -60,7 +60,7 @@ p {
 }
 
 .nav-links-desktop {
-    margin-top: 15px;
+    margin-top: 30px;
     display: flex;
     justify-content: space-around;
     width: 70%;
@@ -90,7 +90,7 @@ body {
 .nav-links-desktop {
     position: absolute;
     right: 0px;
-    height: 92vh;
+    height:550px;
     top: 3.4vh;
     background-color: #68988C;
     border-left: solid 1px black;
@@ -159,7 +159,7 @@ body {
 
 
     .nav-links-desktop {
-
+        
         width: 70%;
     }
     
