--- a/client/src/Components/OurCatalog/our-catalog.css
+++ b/client/src/Components/OurCatalog/our-catalog.css
@@ -6,7 +6,7 @@
 .pets-catalog-wraper {
     margin-left: 22px;
     margin-right: 22px;
-    height:fit-content;
+    height: fit-content;
     background-color: rgba(241, 236, 226, 0.688);
     border: solid 2px #C6E5F1;
     -webkit-box-shadow: 6px -4px 8px -2px #000000;
@@ -18,8 +18,16 @@
     display: inline-flex;
     margin-top: 25px;
 
+
 }
 
+.not-found-text {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-top: 5em;
+    color: #0B325E;
+}
 
 
 
