update home page

--- a/client/src/Components/AdditionalComponents/SlideShowHomePage/slide-show.css
+++ b/client/src/Components/AdditionalComponents/SlideShowHomePage/slide-show.css
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .image {
-    width: 600px;
-    height: 400px;
+    width: 500px;
+    height: 300px;
     border-radius: 5px;
 }
 
