--- a/client/src/Components/core/HomePage/homepage.css
+++ b/client/src/Components/core/HomePage/homepage.css
@@ -5,8 +5,10 @@ h3{
 }
 
 
+
 .container {
-  height: 540px;
+  height: 440px;
+  margin-bottom: 40px;
   width: auto;
   display: grid;
   place-items: center;
