--- a/client/src/Components/core/NavigationBar/NavigationBar.css
+++ b/client/src/Components/core/NavigationBar/NavigationBar.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+.fa-arrow-right {
+    margin-right: 20em;
+}
+
+.fa-arrow-right:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    text-underline-offset: 3px;
+}
 
 .greeting {
     margin-top: 5px;
@@ -57,13 +66,14 @@ p {
 
 .navigation-bar ul li {
     list-style: none;
+    
 }
 
 .nav-links-desktop {
     margin-top: 30px;
     display: flex;
     justify-content: space-around;
-    width: 20%;
+    width: 10%;
 }
 
 .logo-heading {
@@ -100,6 +110,7 @@ body {
     align-items: center;
     width: 30%;
     transform: translateX(100%);
+    
 
     transition: transform 0.5s ease-in;
 
