home page update

--- a/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
@@ -15,8 +15,7 @@
     padding: 10px;
     height: fit-content;
     text-align: -webkit-center;
-    background-color: whitesmoke;
-    opacity: 0.9;
+    background-color: rgba(245, 245, 245, 0.901);
     margin: 55px;
 
     max-height: fit-content;
