--- a/client/src/Components/core/Footer/footer.css
+++ b/client/src/Components/core/Footer/footer.css
@@ -1,8 +1,23 @@
+.footer-root{
+    display: flex;
+}
+
 .footer-content {
     text-align: -webkit-center;
 }
 
-.footer-map-tree {
+.footer-map-tree{
+    display: grid;
+
+    grid-template-columns: 150px 150px 150px;
+}
+.footer-map-tree ul {
+    margin: 0px;
+    padding: 0px;
+    border-left: 1px solid grey;
+}
+
+/* .footer-map-tree {
     text-align: left;
     border-top: 2px solid black;
 
@@ -15,10 +30,10 @@
     -webkit-column-rule: 1px solid rgba(28, 110, 164, 0.26);
     -moz-column-rule: 1px solid rgba(28, 110, 164, 0.26);
     column-rule: 1px solid rgba(28, 110, 164, 0.26);
-}
+} */
 
 .footer-map-tree ul li {
-    color:red;
+    color:salmon;
 
     list-style-type: none;
 }
