--- a/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
@@ -63,17 +63,23 @@
 
     .root-card-class-desktop {
         display: block;
-        height: fit-content;
-
+        /* height: fit-content; */
     }
 
-
+    .pets-about-us-wraper{
+        margin: 0px;
+        margin-left: 30px;
+        margin-right: 30px;
+        
+    }
 
     .our-story-text-desktop {
         max-width: fit-content;
         text-align: center;
         margin-left: 20px;
         margin-right: 20px;
+        
+        margin-top:30px;
 
     }
 
