--- a/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
+++ b/client/src/Components/ProfileComponents/CreatePetPage/createPetPage.css
@@ -54,7 +54,6 @@
     box-shadow: 6px -4px 8px -2px #000000;
     padding: 10px;
     text-align: -webkit-center;
-    background-color: whitesmoke;
-    opacity: 0.9;
+    background-color: rgba(245, 245, 245, 0.9);
     margin-bottom: 100px;
 }
