--- a/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
+++ b/client/src/Components/AdditionalComponents/AboutUsPage/aboutUs.css
@@ -1,11 +1,11 @@
 .root-card-class-desktop {
- 
+
     display: flex;
     width: 100%;
     text-align: center;
 }
 
-  
+
 
 .pets-about-us-wraper {
     border: 1px solid black;
@@ -63,14 +63,18 @@
 
     .root-card-class-desktop {
         display: block;
-        /* height: fit-content; */
+        height: fit-content;
     }
 
-    .pets-about-us-wraper{
+    .pets-about-us-wraper {
+        -webkit-box-shadow: none;
+        box-shadow: none;
+
+
         margin: 0px;
         margin-left: 30px;
         margin-right: 30px;
-        
+
     }
 
     .our-story-text-desktop {
@@ -78,8 +82,7 @@
         text-align: center;
         margin-left: 20px;
         margin-right: 20px;
-        
-        margin-top:30px;
+
 
     }
 
