--- a/client/src/Components/ProfileComponents/PetsCatalog/petsCatalog.css
+++ b/client/src/Components/ProfileComponents/PetsCatalog/petsCatalog.css
@@ -23,15 +23,12 @@
 
 .add-new-pet-button {
 
-    margin-top: 7em;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    padding: 10px;
-    
-    background-color:#68988C;
+    margin-top: 10em;
+    height: 75px;
+    border-radius: 5px;
+    background-color: rgb(33, 21, 21);
     color: white;
-    margin-bottom: 10px;
+    width: 40%;
 }
 
 .add-new-pet-button:hover {
