--- a/client/src/Components/core/NavigationBar/NavigationBar.css
+++ b/client/src/Components/core/NavigationBar/NavigationBar.css
@@ -13,6 +13,11 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+.welcome-message{
+    font-size: 20px;
+    font-style: italic;
+    
+}
 
 .pet-heading {
     color: salmon;
